--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -22,6 +22,9 @@
   --hideNitroButton: none; /* inherit = on || none = off */
   --uploadBarBackground: #5f3392;
   --uploadBarProgress: #b370ff;
+  
+  --emojiButtons: 6;
+  --chatColumns: 2;
 }
 
 html {
@@ -207,8 +210,8 @@ div[class*="imageContent"] span[class*="altText"]{
 .buttons__7ecff {
     margin: 6px 6px 6px auto !important;
     margin-left: auto;
-    max-width: calc(40px * 7); /* CHANGE HERE: 6 columns when expanded */
-    min-width: calc(40px * 1); /* CHANGE HERE: 2 columns when collapsed */
+    max-width: calc(40px * var(--emojiButtons); /* CHANGE HERE: 6 columns when expanded */
+    min-width: calc(40px * var(--chatColumns); /* CHANGE HERE: 2 columns when collapsed */
     width: min-content;
     display: flex;
     gap: 6px 0;
