--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -187,12 +187,11 @@ div[class*="imageContent"] span[class*="altText"]{
 
 /* Custom Emoji Button */
 [class*=emojiButton] [class*=spriteColored]{
-  background-image: var(--customEmojiIconURL);
-  background-size: 24px;
+  background: var(--customEmojiIconURL) center/contain no-repeat;
 }
+
 [class*=emojiButton] [class*=spriteGreyscale]{
-  mask-image: var(--customEmojiIconMask);
-  mask-size: 24px;
+  mask: var(--customEmojiIconMask) center/contain no-repeat;
 }
 
 [id*="popout_"]::after, [class*=menu]::after {
