--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -186,13 +186,9 @@ div[class*="imageContent"] span[class*="altText"]{
 }
 
 /* Custom Emoji Button */
-[class*=emojiButton] [class*=spriteColored]{
-  background: var(--customEmojiIconURL) center/contain no-repeat;
-}
+[class*=emojiButton] [class*=spriteColored]{background: var(--customEmojiIconURL) center/contain no-repeat;}
 
-[class*=emojiButton] [class*=spriteGreyscale]{
-  mask: var(--customEmojiIconMask) center/contain no-repeat;
-}
+[class*=emojiButton] [class*=spriteGreyscale]{mask: var(--customEmojiIconMask) center/contain no-repeat;}
 
 [id*="popout_"]::after, [class*=menu]::after {
   display: var(--displayShiggyIcons);
