--- a/Themes/Float/zFloat.theme.css
+++ b/Themes/Float/zFloat.theme.css
@@ -1,9 +1,9 @@
 /**
  * @name Float
- * @version 2.0.21
+ * @version 2.0.24
  * @author Disease#3749
  * @authorId 678469587444170762
- * @description Compact mobile Discord with customization.
+ * @description Compact mobile Discord with customization | Fixed by LuSaffi
  * @source https://github.com/maenDisease/BetterDiscordStuff/tree/main/Themes/Float
  * @invite BShu37e4jg
  * @website https://maendisease.github.io/
