--- a/Themes/Float/FloatImport.css
+++ b/Themes/Float/FloatImport.css
@@ -1,1 +1,1 @@
-@import url('https://maendisease.github.io/Float/Float.css');
+@import url('https://raw.githubusercontent.com/LuSaffi/VenCordstuff/main/Themes/Float/Float.css');
