--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -60,7 +60,7 @@ li[class*='selected'] [d*="M2 10c0-1.1.9-2 2-2h.5c.28 0"]{
 h3[class*="header"] span[role="button"] {
   color: #b370ff;
   font-family: "Open Sans";
-  font-size: calc((0.4vw + vh) - 1px);
+  font-size: calc((0.4vw + 60%) - 1px);
 }
 
 /* Adds @ symbol in front of usernames */
