content blur addon

--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -28,6 +28,7 @@
   --customEmojiIconURL: url(https://cdn.discordapp.com/emojis/1024751291504791654.gif?size=128&quality=lossless);
   --customEmojiIconMask: url(https://cdn.discordapp.com/emojis/1024751291504791654.gif?size=128&quality=lossless);
   /* CHANGE CUSTOM EMOJI FROM .gif TO .png TO MAKE STATIC ELEMENTS || SIZE SHOULD BE 128 */
+    --contentBlurSize: 3px;
 }
 
 html {
@@ -254,4 +255,22 @@ main[class*=chatContent]{
 }
 [class*=hidden] [class*=obscuredTextContentInner i] span{
   filter: blur(4px);
+}
+
+/* Spoiler Blur */
+[class*=spoilerMarkdownContent i]{
+  background-color: transparent;
+}
+
+[class*=obscuredTextContentInner]{
+  color: var(--text-3);
+}
+
+[class*=obscuredTextContentInner i] code, [class*=obscuredTextContentInner i] span{
+    opacity: unset;
+    -webkit-transition: none;
+    transition: none;
+}
+[class*=hidden] [class*=obscuredTextContentInner i] span{
+  filter: blur(var(--contentBlurSize));
 }
