--- a/CSS/LuLus_Super_CSS.css
+++ b/CSS/LuLus_Super_CSS.css
@@ -1,6 +1,7 @@
 @import url("https://syndishanx.github.io/Discord-Dark/Imports/NormalizedForums.css");
 @import url("https://raw.githubusercontent.com/Panniku/vc-snippets/main/BetterSpotifyPlayer.css");
 @import url("https://minidiscordthemes.github.io/Snippets/AltTextImprovements/main.css");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
 
 :root {
   --channelColor: #b370ff;
